# zip_to_locality

./: .gitignore  Cargo.toml  README.md  download-zip-data.sh
src/: error.rs  lib.rs
tests/: integration.rs
